# usage

./: .env.example  .gitignore  CHANGELOG.en.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.en.md  CONTRIBUTING.md  README.en.md  README.md  codex_loader.py  main.py  menubar.py  pricing.py  pyproject.toml  setup_app.py  setup_hook.py  usage_client.py  usage_desktop.py  usage_env.py  usage_rate.py  usage_state.py  usage_statusline.py  usage_web.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: check.yml  release.yml  windows-exe.yml
panels/: __init__.py  ecg.py  minimal.py  sketch.py
scripts/: build_app.sh  build_windows_exe.ps1  com.lollapalooza.usage.plist  com.yanowo.usagemonitor.plist  install-hook.sh  install-launchagent.sh  uninstall-launchagent.sh
tests/: test_codex_loader.py  test_main.py  test_panels.py  test_setup_hook.py  test_usage_client.py  test_usage_desktop.py  test_usage_env.py  test_usage_state.py  test_usage_web.py
